fix margins on ios

--- a/css/_info.scss
+++ b/css/_info.scss
@@ -6,11 +6,18 @@
 	height: 100%;
 	overflow: hidden;
 	margin: 0 !important;
-	background-color: black;
+	background-color: transparent;
 	color: black;
 	-webkit-overflow-scrolling: touch;
 	// background: url(../img/sushi.jpg) no-repeat center center;
 	@include vendorize(background-size, cover);
+	@media (max-width: 1024px){
+		background: url(../img/sushi.jpg) no-repeat center center;
+	}
+	//- If browser has webgl disabled, show static background
+	&.nogl{
+		background: url(../img/sushi.jpg) no-repeat center center;
+	}
 	iframe.threed{
 		position: fixed;
 		top: 0;
@@ -19,6 +26,9 @@
 		height: 100%;
 		z-index: 1;
 		@media (max-width: 1024px){
+			display: none;
+		}
+		&.nogl{
 			display: none;
 		}
 	}
@@ -79,7 +89,7 @@
 			position: relative;
 			top: 0;
 			width: 100%;
-			height: 100%;
+			height: auto;
 
 			.logo{
 				position: relative;
@@ -94,9 +104,15 @@
 					margin-top: 20%;
 				}
 			}
-			a,i{
+			a.fa{
 				color: black;
 				font-size: 3em;
+				text-decoration: none;
+			}
+			a{
+				color: black;
+				text-decoration: underline;
+				font-weight: bold;
 			}
 			p{
 				width: 80%;
@@ -106,38 +122,6 @@
 				font-weight: lighter;
 			}
 
-			.making-of-video{
-				// @include vendorize(box-shadow, 2px 2px 15px black);
-				@include vendorize(backface-visibility, hidden);
-				opacity: 1;
-				position: relative;
-				box-sizing: border-box;
-				padding-bottom: 56.25%;
-				padding-top: 30px;
-				height: 0;
-				display: block;
-				overflow: hidden;
-				margin-bottom: 50px;
-				margin-top: 50px;
-				width: 90%;
-				margin-left: 5%;
-				z-index: 1;
-				background-size: cover !important;
-				iframe, object, embed{
-					position: absolute;
-					display: block;
-					top: 0;
-					left: 0;
-					width: 100%;
-					height: 100%;
-
-				}
-				@media (max-width: 1024px){
-				}
-				@media (max-width: 767px){
-
-				}
-			}
 		}
 		
 		.sushi, .cast{
@@ -146,24 +130,8 @@
 			height: auto;
 			display: block;
 			position: relative;
-			margin-top: 90%;
+			margin-top: 10%;
 
-			@media (max-width: 1024px){
-				margin-top: 50%;
-				@media (orientation: landscape){
-					margin-top: 80%;
-				}
-			}
-
-			@media (max-width: 767px){
-				margin-top: 100%;
-				@media (-webkit-min-device-pixel-ratio: 3){
-					margin-top: 40%;
-					@media (orientation: landscape){
-						margin-top: 80%;
-					}
-				}
-			}
 
 			h3.subhead, h3.casthead{
 				text-align: center;
